--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <title>TuGo React PoC Demo</title>
   <link href="node_modules/materialize-css/bin/materialize.css" rel="stylesheet" type="text/css" media="screen"/>
+  <link href="main.css" type="text/css" rel="stylesheet" />
 </head>
-  <body>
+  <body class="teal">
     <div class="react-root"></div>
     <script src="node_modules/jquery/dist/jquery.js"></script>
     <script src="node_modules/materialize-css/bin/materialize.js"></script>
